Using gradle, removed armor event